add scalar for GET Category
